UIEXT-2654: Add default min/max validation for numeric fields
UIEXT-2654 (Show inline error messages for number input field values out of bounds)