@@ -74,16 +74,20 @@ import static org.knime.core.webui.node.dialog.defaultdialog.jsonforms.JsonForms
 import static org.knime.core.webui.node.dialog.defaultdialog.jsonforms.JsonFormsConsts.UiSchema.TAG_OPTIONS;
 import static org.knime.core.webui.node.dialog.defaultdialog.jsonforms.JsonFormsConsts.UiSchema.TAG_UNKNWON_VALUES_TEXT;
 import static org.knime.core.webui.node.dialog.defaultdialog.jsonforms.JsonFormsConsts.UiSchema.TAG_USE_FLOW_VAR_TEMPLATES;
+import static org.knime.core.webui.node.dialog.defaultdialog.jsonforms.uischema.DefaultNumberValidationUtil.getDefaultNumberValidations;
 import static org.knime.core.webui.node.dialog.defaultdialog.widget.util.WidgetImplementationUtil.getApplicableDefaults;
 import static org.knime.core.webui.node.dialog.defaultdialog.widget.util.WidgetImplementationUtil.partitionWidgetAnnotationsByApplicability;
 
 import java.lang.reflect.Field;
 import java.time.ZoneId;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalInt;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -156,8 +160,10 @@ import org.knime.core.webui.node.dialog.defaultdialog.widget.internal.OverwriteD
 import org.knime.core.webui.node.dialog.defaultdialog.widget.updates.NoopBooleanProvider;
 import org.knime.core.webui.node.dialog.defaultdialog.widget.updates.NoopStringProvider;
 import org.knime.core.webui.node.dialog.defaultdialog.widget.updates.StateProvider;
+import org.knime.core.webui.node.dialog.defaultdialog.widget.util.WidgetImplementationUtil;
 import org.knime.core.webui.node.dialog.defaultdialog.widget.util.WidgetImplementationUtil.WidgetAnnotation;
 import org.knime.core.webui.node.dialog.defaultdialog.widget.validation.BuiltinValidation;
+import org.knime.core.webui.node.dialog.defaultdialog.widget.validation.NumberInputWidgetValidation;
 import org.knime.filehandling.core.port.FileSystemPortObjectSpec;
 import org.knime.filehandling.core.util.WorkflowContextUtil;
 
@@ -527,12 +533,19 @@ final class UiSchemaOptionsGenerator {
             if (textInputWidget.placeholderProvider() != NoopStringProvider.class) {
                 options.put("placeholderProvider", textInputWidget.placeholderProvider().getName());
             }
-            addValidationOptions(options, textInputWidget.validation(), textInputWidget.validationProvider());
+            addValidationOptions(options, textInputWidget.validation(), Map.of(), textInputWidget.validationProvider());
         }
 
-        if (annotatedWidgets.contains(NumberInputWidget.class)) {
-            final var numberInputWidget = m_node.getAnnotation(NumberInputWidget.class).orElseThrow();
-            addValidationOptions(options, numberInputWidget.validation(), numberInputWidget.validationProvider());
+        if (WidgetImplementationUtil.NUMERIC_TYPES.contains(m_fieldClass)) {
+            Class<? extends StateProvider<? extends NumberInputWidgetValidation>>[] validationProviders = null;
+            Class<? extends NumberInputWidgetValidation>[] validations = null;
+
+            if (annotatedWidgets.contains(NumberInputWidget.class)) {
+                final var numberInputWidget = m_node.getAnnotation(NumberInputWidget.class).orElseThrow();
+                validations = numberInputWidget.validation();
+                validationProviders = numberInputWidget.validationProvider();
+            }
+            addValidationOptions(options, validations, getDefaultNumberValidations(m_fieldClass), validationProviders);
         }
 
         if (m_node instanceof ArrayParentNode<WidgetGroup> arrayWidgetNode) {
@@ -545,14 +558,26 @@ final class UiSchemaOptionsGenerator {
     }
 
     private static <T extends BuiltinValidation> void addValidationOptions(final ObjectNode options,
-        final Class<? extends T>[] validations,
+        final Class<? extends T>[] validations, final Map<Class<? extends T>, T> defaultValidations,
         final Class<? extends StateProvider<? extends T>>[] validationProviders) {
 
-        if (validations.length != 0) {
-            final var validationInstances = Stream.of(validations).map(InstantiationUtil::createInstance).toList();
-            options.set("validations", JsonFormsUiSchemaUtil.getMapper().valueToTree(validationInstances));
+        final var hasValidations = validations != null && validations.length != 0;
+        if (hasValidations || !defaultValidations.isEmpty()) {
+            final List<T> combinedValidationInstances;
+            if (hasValidations) {
+                final var validationInstances = Arrays.stream(validations).map(InstantiationUtil::createInstance);
+                final var filteredDefaultValidationInstances = defaultValidations.entrySet().stream() //
+                    .filter(defaultValidation -> Arrays.stream(validations)
+                        .noneMatch(defaultValidation.getKey()::isAssignableFrom))
+                    .map(Map.Entry::getValue);
+                combinedValidationInstances =
+                    Stream.concat(validationInstances, filteredDefaultValidationInstances).collect(Collectors.toList());
+            } else {
+                combinedValidationInstances = new ArrayList<>(defaultValidations.values());
+            }
+            options.set("validations", JsonFormsUiSchemaUtil.getMapper().valueToTree(combinedValidationInstances));
         }
-        if (validationProviders.length != 0) {
+        if (validationProviders != null && validationProviders.length != 0) {
             options.set("validationProviders", JsonFormsUiSchemaUtil.getMapper().valueToTree(validationProviders));
         }
     }
